--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "aot": "ng serve --aot",
+    "deploy": "ng github-pages:deploy --message \"deploy\" "
   },
   "private": true,
   "dependencies": {
