--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
     "aot": "ng serve --aot",
+    "aot:p": "ng serve --aot --prod",
     "deploy": "ng github-pages:deploy --message \"deploy\" "
   },
   "private": true,
