--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
     "aot": "ng serve --aot",
-    "aot:p": "ng serve --aot --prod",
-    "deploy": "ng github-pages:deploy --message \"deploy\" "
+    "build": "ng build --aot --prod",
+    "deploy": "npm run build && firebase deploy && firebase open hosting:site",
+    "deploy:github": "ng github-pages:deploy --message \"deploy\" "
   },
   "private": true,
   "dependencies": {
